@@ -742,7 +742,7 @@ connect_to_server (CamelService *service, struct addrinfo *ai, int ssl_mode, int
 	gboolean force_imap4 = FALSE;
 	gboolean clean_quit = TRUE;
 	char *buf;
-	gboolean not_ssl = TRUE;
+	gboolean not_ssl = TRUE, no_binary=FALSE, no_uidplus=FALSE;
 
 	memset (&sockopt, 0, sizeof (CamelSockOptData));
 
@@ -843,6 +843,15 @@ connect_to_server (CamelService *service, struct addrinfo *ai, int ssl_mode, int
 		force_imap4 = TRUE;
 	}
 
+	/* Kolumbus requires part numbers in BINARY.PEEK, which is their mis -
+	 * interpretation of BINARY imo, so we just ignore its BINARY support. 
+	 * The server also claims to support UIDPLUS, but doesn't */
+
+	if (strstr (buf, "kolumbus")) {
+		no_uidplus = TRUE;
+		no_binary = TRUE;
+	}
+
 	/* Tinymail hack: always use IMAP4, not IMAP4rev1 (sorry) */
 	/* force_imap4 = TRUE; */
 	store->braindamaged = TRUE;
@@ -858,6 +867,11 @@ connect_to_server (CamelService *service, struct addrinfo *ai, int ssl_mode, int
 			service->url->host, _("Reading first CAPABILITY failed"));
 		goto exception;
 	}
+
+	if (no_binary)
+		store->capabilities &= ~IMAP_CAPABILITY_BINARY;
+	if (no_uidplus)
+		store->capabilities &= ~IMAP_CAPABILITY_UIDPLUS;
 
 	if (must_tls && !(store->capabilities & IMAP_CAPABILITY_STARTTLS))
 	{
@@ -936,6 +950,11 @@ connect_to_server (CamelService *service, struct addrinfo *ai, int ssl_mode, int
 			service->url->host, _("Reading second CAPABILITY failed"));
 		goto exception;
 	}
+
+	if (no_binary)
+		store->capabilities &= ~IMAP_CAPABILITY_BINARY;
+	if (no_uidplus)
+		store->capabilities &= ~IMAP_CAPABILITY_UIDPLUS;
 
 	if (store->capabilities & IMAP_CAPABILITY_LOGINDISABLED ) { 
 		camel_exception_setv (ex, CAMEL_EXCEPTION_SYSTEM,
